@@ -65,7 +65,8 @@ my @modules = ( "Time::HiRes",
                 "Net::MAC::Vendor",
                 "Net::SNMP",
                 "LWP::UserAgent",
-                "Net::Telnet::Cisco",
+                "Net::Telnet",
+                "Net::Appliance::Session",
                 "Log::Log4perl",
                 "Thread::Pool",
                 "Apache::Htpasswd",
