@@ -27,7 +27,7 @@ use diagnostics;
 use base ('pf::SNMP::Cisco');
 use Log::Log4perl;
 use Carp;
-use Net::Telnet::Cisco;
+use Net::Appliance::Session;
 use Net::SNMP;
 use Data::Dumper;
 
@@ -46,8 +46,8 @@ sub deauthenticateMac {
     
     my $session;
     eval {
-        $session = Net::Telnet::Cisco->new(Host => $this->{_ip}, Timeout=>5);
-        $session->login($this->{_telnetUser}, $this->{_telnetPwd});
+        $session = Net::Appliance::Session->new(Host => $this->{_ip}, Timeout=>5, Transport => 'Telnet');
+        $session->connect(User => $this->{_telnetUser}, Password => $this->{_telnetPwd});
     };
 
     if ($@) {
